Bug 76279 - DOCX: FILESAVE: invalid citation after roundtrip
Summary: DOCX: FILESAVE: invalid citation after roundtrip
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Sourav
URL:
Whiteboard: target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-17 17:02 UTC by Jacobo Aragunde Pérez
Modified: 2016-02-19 12:33 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Test case (14.50 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-03-17 17:02 UTC, Jacobo Aragunde Pérez
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jacobo Aragunde Pérez 2014-03-17 17:02:01 UTC
Created attachment 95955 [details]
Test case

Steps to reproduce:

1. Open attached file.
2. Save it back with a different name.
3. Open the saved file with Word 2010 (*)
4. Do some bibliography operation, for example, change the style (references tab -> citations and bibliography box -> style).
5. The citation will change to "invalid source".

(*) I couldn't try with other versions of Word, but probably the bug happens too.

Causes:

Studying the XML inside the documents, this is the citation in the original file:
  <w:instrText xml:space="preserve">CITATION Joh50 \l 1033</w:instrText>

And this is the citation in the exported file:
  <w:instrText>CITATION [Joh50]</w:instrText>

I've checked that if the exported document looked like this, it would be correct:
  <w:instrText>CITATION Joh50</w:instrText>
Comment 1 Terrence Enger 2014-03-17 18:36:49 UTC
Jacobo,

Is your problem the same as reported in bug 75133 "Bibliography field flags are not preserved in Round trip file"?

Thanks,
Terry.
Comment 2 Jacobo Aragunde Pérez 2014-03-17 20:24:24 UTC
(In reply to comment #1)
> 
> Is your problem the same as reported in bug 75133 "Bibliography field flags
> are not preserved in Round trip file"?
> 

Thanks for the heads up Terry. This bug is a specific problem in the code wrote to fix bug 75133. I've added some comments there to make the hackers working in that bug know about this.

I would rather not close this one as a duplicated as this is a new issue IMHO, but feel free to do what you consider more appropriate :)
Comment 3 Terrence Enger 2014-03-17 20:38:15 UTC
Setting status NEW in accord with comment 2.

Jacabo,
You know more about this that I do.  I am happy with your determination that these are different bugs.

Terry.
Comment 4 Commit Notification 2014-07-11 08:17:06 UTC
Sourav committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f021524aadfe1aa1a07f4600bcb89e7c69ccfdb0

fdo#76279 Invalid Citation on RoundTrip



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.