fdo#76279 Invalid Citation on RoundTrip

Reviewed on:
	https://gerrit.libreoffice.org/9898

Change-Id: Idfe39761180ae1eeb0066ae3aac13de6ac6df0b9