sw/inc/authfld.hxx
@@ -153,6 +153,9 @@ public:
     /// For internal use only, in general continue using ExpandField() instead.
     OUString ConditionalExpand(ToxAuthorityField eField) const;
 
+    //To handle Citation
+    OUString ExpandCitation(ToxAuthorityField eField) const;
+
     SwAuthorityField(SwAuthorityFieldType* pType, const OUString& rFieldContents);
     SwAuthorityField(SwAuthorityFieldType* pType, sal_IntPtr nHandle);
     virtual ~SwAuthorityField();
